fix z-index on all pages.
Menu-bar had a higher z-index than the slideshow scripts, therefore menu-bar allways was on top.
This changes that.

--- a/css/album.css
+++ b/css/album.css
@@ -29,7 +29,7 @@ img {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 3; /* menu bar has z-index 2 */
   padding-top: 5px;
   left: 0;
   top: 0;
